Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29728

Warning shown when importing QtLocation from QtQuick apps: "'QtLocation' does not contain a module identifier directive"

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • Some future release
    • 5.0.1
    • Location
    • None
    • 33f07da0e76b8eba12fbf2a1d193875be5046df4

      When creating a minimal QtQuick 2.0 application and launching it with qmlscene, the following warning always appears:

      'QtLocation' does not contain a module identifier directive - it
      cannot be protected from external registrations.

        For Gerrit Dashboard: QTBUG-29728
        # Subject Branch Project Status CR V

            amccarthy Aaron McCarthy
            dplanella David Planella
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes