Fixes warning when using "QtLocation 5.0" import.

Declare the module name in the qmldir file.

Task-number: QTBUG-29728
Change-Id: I323eba9b17203cd56c843823576e82853b6c1aa7
Reviewed-by: Alex <ablasche@gmail.com>